--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-netlify-cms": "^4.1.6",
     "gatsby-plugin-purgecss": "^4.0.0",
     "gatsby-plugin-react-helmet": "^3.0.4",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-remark-copy-linked-files": "^2.0.7",
@@ -37,9 +38,11 @@
     "gatsby-transformer-sharp": "^2.1.9",
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
+    "moment": "^2.24.0",
     "netlify-cms-app": "^2.9.6",
     "netlify-cms-media-library-cloudinary": "^1.3.2",
     "netlify-cms-media-library-uploadcare": "^0.5.2",
+    "newsapi": "^2.4.0",
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.0",
     "react": "^16.8.4",
@@ -47,7 +50,8 @@
     "react-helmet": "^5.2.0",
     "react-sharingbuttons": "^1.0.0",
     "reset-css": "^5.0.1",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "yahoo-stock-prices": "^1.0.1"
   },
   "devDependencies": {
     "prettier": "^1.15.3"
