--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,3 +1,4 @@
+publish_mode: editorial_workflow
 backend:
   name: git-gateway
   branch: master
@@ -17,6 +18,7 @@ collections:
     folder: "src/pages/article"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    preview_path: article/{{slug}}
     fields:
       - {
           label: "Template Key",
