--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "gatsby-image": "^2.0.23",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-netlify": "^2.0.6",
-    "gatsby-plugin-netlify-cms": "^4.1.6",
+    "gatsby-plugin-netlify-cms": "^4.1.37",
     "gatsby-plugin-purgecss": "^4.0.0",
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-robots-txt": "^1.5.0",
@@ -38,10 +38,11 @@
     "gatsby-transformer-sharp": "^2.1.9",
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
+    "marked": "^0.8.0",
     "moment": "^2.24.0",
-    "netlify-cms-app": "^2.9.6",
-    "netlify-cms-media-library-cloudinary": "^1.3.2",
-    "netlify-cms-media-library-uploadcare": "^0.5.2",
+    "netlify-cms-app": "^2.11.9",
+    "netlify-cms-media-library-cloudinary": "^1.3.4",
+    "netlify-cms-media-library-uploadcare": "^0.5.5",
     "newsapi": "^2.4.0",
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.0",
