Initial hello world lambda

--- a/package.json
+++ b/package.json
@@ -7,21 +7,25 @@
   "main": "n/a",
   "keywords": [
     "gatsby",
+    "lambda",
     "foxes",
     "n",
     "friends"
   ],
   "scripts": {
-    "clean": "gatsby clean",
+    "clean": "gatsby clean && rimraf lambda-build",
     "ci": "npm run lint && npm run build",
     "start": "npm run develop",
-    "build": "npm run clean && gatsby build",
-    "develop": "npm run clean && gatsby develop",
-    "lint": "eslint src/**/*.js src/**/*.jsx",
-    "lint:fix": "eslint --fix src/**/*.js src/**/*.jsx",
+    "build": "npm run clean && npm run build:lambda && gatsby build",
+    "build:lambda": "netlify-lambda build functions",
+    "dev": "npm run clean && run-p dev:*",
+    "dev:frontend": "dotenv gatsby develop",
+    "dev:backend": "netlify-lambda serve functions",
+    "lint": "eslint gatsby-*.js functions/**/*.js src/**/*.js src/**/*.jsx",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "dotenv-cli": "^3.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -42,11 +46,16 @@
     "gatsby-source-filesystem": "^2.0.26",
     "gatsby-transformer-remark": "^2.6.9",
     "gatsby-transformer-sharp": "^2.1.9",
+    "http-proxy-middleware": "^0.20.0",
     "lodash-webpack-plugin": "^0.11.4",
     "lodash": "^4.17.15",
     "lynt": "^0.5.5",
     "marked": "^0.8.0",
+    "netlify-lambda": "^1.6.3",
+    "newsapi": "^2.4.0",
     "node-sass": "^4.11.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.0",
     "uuid": "^3.2.1",
     "yahoo-stock-prices": "^1.0.1"
   },
