--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
   "scripts": {
     "clean": "gatsby clean && rimraf lambda-build",
     "ci": "npm run lint && npm run build",
-    "start": "npm run develop",
-    "build": "npm run clean && npm run build:lambda && gatsby build",
+    "build": "npm run clean && npm run build:lambda && npm run build:frontend",
+    "build:frontend": "gatsby build",
     "build:lambda": "netlify-lambda build functions",
     "dev": "npm run clean && run-p dev:*",
     "dev:frontend": "dotenv gatsby develop",
-    "dev:backend": "netlify-lambda serve functions",
-    "lint": "eslint gatsby-*.js functions/**/*.js src/**/*.js src/**/*.jsx",
+    "dev:lambda": "nodemon",
+    "lint": "eslint gatsby-*.js functions/**/*.js src/**/*.js src/**/*.jsx ",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "nodemonConfig": {
+    "exec": "dotenv netlify-lambda serve functions",
+    "watch": ["functions/"]
   },
   "devDependencies": {
     "dotenv-cli": "^3.1.0",
@@ -54,12 +58,15 @@
     "netlify-lambda": "^1.6.3",
     "newsapi": "^2.4.0",
     "node-sass": "^4.11.0",
+    "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.0",
     "uuid": "^3.2.1",
     "yahoo-stock-prices": "^1.0.1"
   },
   "dependencies": {
+    "apollo-server": "^2.9.16",
+    "apollo-server-lambda": "^2.9.16",
     "gatsby-image": "^2.0.23",
     "gatsby": "^2.13.31",
     "marked": "^0.8.0",
@@ -67,6 +74,7 @@
     "netlify-cms-app": "^2.11.9",
     "netlify-cms-media-library-cloudinary": "^1.3.4",
     "netlify-cms-media-library-uploadcare": "^0.5.5",
+    "node-fetch": "^2.6.0",
     "prop-types": "^15.7.2",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
