--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,4 @@
 
 [template.environment]
   NEWS_API_KEY = "Your api key for https://newsapi.org/"
+  GITHUB_TOKEN = "Your api token. For more info see https://help.github.com/en/github/authenticating-to-github/creating-a-personal-access-token-for-the-command-line"
