Initial hello world lambda (#4)
- Updated netlify.toml
- Added graphql lambda
- Updated CMS to preview homepage
- Refactored to separate components and containers
- Added .nvmrc
- Added README

--- a/package.json
+++ b/package.json
@@ -7,21 +7,29 @@
   "main": "n/a",
   "keywords": [
     "gatsby",
+    "lambda",
     "foxes",
     "n",
     "friends"
   ],
   "scripts": {
-    "clean": "gatsby clean",
+    "clean": "gatsby clean && rimraf lambda-build",
     "ci": "npm run lint && npm run build",
-    "start": "npm run develop",
-    "build": "npm run clean && gatsby build",
-    "develop": "npm run clean && gatsby develop",
-    "lint": "eslint src/**/*.js src/**/*.jsx",
-    "lint:fix": "eslint --fix src/**/*.js src/**/*.jsx",
+    "build": "npm run clean && npm run build:lambda && npm run build:frontend",
+    "build:frontend": "gatsby build",
+    "build:lambda": "netlify-lambda build functions",
+    "dev": "npm run clean && run-p dev:*",
+    "dev:frontend": "dotenv gatsby develop",
+    "dev:lambda": "nodemon",
+    "lint": "eslint gatsby-*.js functions/**/*.js src/**/*.js src/**/*.jsx ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "nodemonConfig": {
+    "exec": "dotenv netlify-lambda serve functions",
+    "watch": ["functions/"]
+  },
   "devDependencies": {
+    "dotenv-cli": "^3.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -42,15 +50,23 @@
     "gatsby-source-filesystem": "^2.0.26",
     "gatsby-transformer-remark": "^2.6.9",
     "gatsby-transformer-sharp": "^2.1.9",
+    "http-proxy-middleware": "^0.20.0",
     "lodash-webpack-plugin": "^0.11.4",
     "lodash": "^4.17.15",
     "lynt": "^0.5.5",
     "marked": "^0.8.0",
+    "netlify-lambda": "^1.6.3",
+    "newsapi": "^2.4.0",
     "node-sass": "^4.11.0",
+    "nodemon": "^2.0.2",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.0",
     "uuid": "^3.2.1",
     "yahoo-stock-prices": "^1.0.1"
   },
   "dependencies": {
+    "apollo-server": "^2.9.16",
+    "apollo-server-lambda": "^2.9.16",
     "gatsby-image": "^2.0.23",
     "gatsby": "^2.13.31",
     "marked": "^0.8.0",
@@ -58,6 +74,7 @@
     "netlify-cms-app": "^2.11.9",
     "netlify-cms-media-library-cloudinary": "^1.3.4",
     "netlify-cms-media-library-uploadcare": "^0.5.5",
+    "node-fetch": "^2.6.0",
     "prop-types": "^15.7.2",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
