--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "lynt": "^0.5.5",
     "marked": "^0.8.0",
     "netlify-lambda": "^1.6.3",
-    "newsapi": "^2.4.0",
     "node-sass": "^4.11.0",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
@@ -67,6 +66,7 @@
   "dependencies": {
     "apollo-server": "^2.9.16",
     "apollo-server-lambda": "^2.9.16",
+    "front-matter": "^3.1.0",
     "gatsby-image": "^2.0.23",
     "gatsby": "^2.13.31",
     "marked": "^0.8.0",
@@ -74,7 +74,9 @@
     "netlify-cms-app": "^2.11.9",
     "netlify-cms-media-library-cloudinary": "^1.3.4",
     "netlify-cms-media-library-uploadcare": "^0.5.5",
-    "node-fetch": "^2.6.0",
+    "newsapi": "^2.4.0",
+    "newsapi-netlify-lambda": "^2.4.0",
+    "node-fetch": "^2.2.0",
     "prop-types": "^15.7.2",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
