--- a/package.json
+++ b/package.json
@@ -26,24 +26,27 @@
   },
   "nodemonConfig": {
     "exec": "dotenv netlify-lambda serve functions",
-    "watch": ["functions/"]
+    "watch": [
+      "functions/"
+    ]
   },
   "devDependencies": {
     "dotenv-cli": "^3.1.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react-hooks": "^2.3.0",
     "eslint-plugin-react": "^7.18.0",
-    "eslint": "^5.16.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-netlify-cms": "^4.1.37",
     "gatsby-plugin-netlify": "^2.0.6",
+    "gatsby-plugin-netlify-cms": "^4.1.37",
     "gatsby-plugin-purgecss": "^4.0.0",
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-styled-jsx": "^3.1.18",
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-images": "^3.1.6",
     "gatsby-remark-relative-images": "^0.2.1",
@@ -51,8 +54,8 @@
     "gatsby-transformer-remark": "^2.6.9",
     "gatsby-transformer-sharp": "^2.1.9",
     "http-proxy-middleware": "^0.20.0",
-    "lodash-webpack-plugin": "^0.11.4",
     "lodash": "^4.17.15",
+    "lodash-webpack-plugin": "^0.11.4",
     "lynt": "^0.5.5",
     "marked": "^0.8.0",
     "netlify-lambda": "^1.6.3",
@@ -67,8 +70,8 @@
     "apollo-server": "^2.9.16",
     "apollo-server-lambda": "^2.9.16",
     "front-matter": "^3.1.0",
-    "gatsby-image": "^2.0.23",
     "gatsby": "^2.13.31",
+    "gatsby-image": "^2.0.23",
     "marked": "^0.8.0",
     "moment": "^2.24.0",
     "netlify-cms-app": "^2.11.9",
@@ -78,10 +81,11 @@
     "newsapi-netlify-lambda": "^2.4.0",
     "node-fetch": "^2.2.0",
     "prop-types": "^15.7.2",
+    "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-sharingbuttons": "^1.0.0",
-    "react": "^16.8.4",
-    "reset-css": "^5.0.1"
+    "reset-css": "^5.0.1",
+    "styled-jsx": "^3.2.4"
   }
 }
