--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^2.3.0",
+    "gatsby-plugin-env-variables": "^1.0.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^4.1.37",
@@ -67,11 +68,13 @@
     "yahoo-stock-prices": "^1.0.1"
   },
   "dependencies": {
+    "@sentry/browser": "^5.11.2",
     "apollo-server": "^2.9.16",
     "apollo-server-lambda": "^2.9.16",
     "front-matter": "^3.1.0",
     "gatsby": "^2.13.31",
     "gatsby-image": "^2.0.23",
+    "logrocket": "^1.0.6",
     "marked": "^0.8.0",
     "moment": "^2.24.0",
     "netlify-cms-app": "^2.11.9",
