--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.2.9",
-    "gatsby-plugin-styled-jsx": "^3.1.18",
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-images": "^3.1.6",
     "gatsby-remark-relative-images": "^0.2.1",
@@ -60,6 +59,7 @@
     "lynt": "^0.5.5",
     "marked": "^0.8.0",
     "netlify-lambda": "^1.6.3",
+    "node-object-hash": "^2.0.0",
     "node-sass": "^4.11.0",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
@@ -88,7 +88,6 @@
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-sharingbuttons": "^1.0.0",
-    "reset-css": "^5.0.1",
-    "styled-jsx": "^3.2.4"
+    "reset-css": "^5.0.1"
   }
 }
