--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.0",
+    "urlify": "^0.3.6",
     "uuid": "^3.2.1",
     "yahoo-stock-prices": "^1.0.1"
   },
